--- a/t.fukuda/hjq/package.yaml
+++ b/t.fukuda/hjq/package.yaml
@@ -21,9 +21,12 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- text
 
 library:
   source-dirs: src
+  dependencies:
+    - attoparsec
 
 executables:
   hjq-exe:
