--- a/t.fukuda/hjq/package.yaml
+++ b/t.fukuda/hjq/package.yaml
@@ -22,6 +22,11 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - text
+- vector
+- unordered-containers
+- aeson
+- lens-aeson
+- lens
 
 library:
   source-dirs: src
